Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/apigateway-dev/apigateway-dev-konga.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-konga
  namespace: apigateway-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        app: konga
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: konga
        image: "pantsel/konga:next"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1337
          name: http
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: apigateway-konga
  namespace: apigateway-dev
spec:
  ports:
  - port: 80
    targetPort: 1337
  selector:
    app: konga
